--- a/maria escola/maria escola/index.html
+++ b/maria escola/maria escola/index.html
@@ -10,8 +10,8 @@
         
 <img src="alurastart logo 1.png" alt="">
 <ul>
-    <li>escola</li>
-    <li>aluno</li>
+    <li class="">escola</li>
+    <li class="">aluno</li>
 </ul>
 <header>
 
