--- a/maria escola/maria escola/index.html
+++ b/maria escola/maria escola/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title><link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="cabeçlho">
         
-<img src="alurastart logo 1.png" alt="">
-<ul>
-    <li class="">escola</li>
-    <li class="">aluno</li>
+     <img class="cabeçalho-imagem" src="alurastart logo 1.png" alt="">
+<ul class="cabeçalho-lista">
+    <li class="cabeçalio-lista-item">escola</li>
+    <li class="cabeçalho-lista-item">aluno</li>
 </ul>
 <header>
 
