--- a/maria escola/maria escola/index.html
+++ b/maria escola/maria escola/index.html
@@ -15,7 +15,14 @@
     <li class="cabeçalho-lista-item">aluno</li>
 </ul>
 <header>
-
+    <section>
+        <h2>Sobre a Escola</h2>
+        <p>A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p>
+        <p>A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+    </section>
+<section class="escola"> </p>
+    <h2 class="escola título "> </p>
+     <p class="escola parágrafo"> </p>
 <body>
 <html>
 
